--- a/business/dazhuanpan/index.less
+++ b/business/dazhuanpan/index.less
@@ -222,6 +222,20 @@
         .status-end{
             background-image: url(./images/status-end.jpg);
         }
+        .status-error{
+            background-image: url(./images/status-error.jpg);
+            .status-in-msg{ 
+                position: absolute;
+                width: 100%;
+                height: 100% * 40 / 433;
+                text-align: center;
+                color: #f95f15;
+                top: 100% * 95 / 433;
+                left: 0;
+                font-weight: 700;
+                letter-spacing: 0.3rem;
+            }
+        }
         .status-no{
             background-image: url(./images/status-no.jpg);
         }
