--- a/business/dazhuanpan/index.less
+++ b/business/dazhuanpan/index.less
@@ -26,7 +26,8 @@
         background-size: 100%;
         background-position: bottom;
     }
-
+    
+    // 我的奖品
     .owner{
         display: block;
         position: absolute;
@@ -35,7 +36,8 @@
         z-index: 11;
         top: 100% * 41 / 1334;
     }
-
+    
+    // 大转盘
     .lottery{
         position: fixed;
         width: 80%;
@@ -46,7 +48,8 @@
         z-index: 6;
         background-image:url(./images/zp_bg.png);
         background-size: 100%;
-
+        
+        // 大转盘可转动部分
         .cont{
             width: 100%;
 
@@ -68,6 +71,7 @@
                 background-size: 100%;
             }
 
+            // 大转盘奖项 canvas
             .inner{
                 position: absolute;
                 z-index: 9;
@@ -78,6 +82,7 @@
                 left: 0;
             }
         }
+        // 大转盘按钮
         .btn{
             width: 100%;
             height: 100%;
@@ -88,7 +93,8 @@
             z-index: 10;
             background: url(./images/zp_btn.png) no-repeat center;
             background-size: 100%;
-
+            
+            // 按钮呼吸
             .inner{
                 width: 100% * 178 / 643;
                 margin-left: 100% * 2/ 643;
@@ -114,6 +120,8 @@
                 to   {width: 100% * 158 / 643;}
             }
         }
+
+        // 活动规则
         .rule{
             display: block;
             z-index: 20;
@@ -158,6 +166,7 @@
             transform: translateY(-100%);
         }
     }
+    // 活动规则弹窗
     .win_rule{
         top: 55%;
         .content{
@@ -180,6 +189,7 @@
             }
         }
     }
+    // 提示消息弹窗
     .win_tip{
         .tip-show{
             position: absolute;
@@ -291,6 +301,7 @@
             }
         }
     }
+    // 我的奖品弹窗
     .win_owner{
         width: 100% * 697 / 750;
 
