--- a/business/dazhuanpan/index.less
+++ b/business/dazhuanpan/index.less
@@ -37,6 +37,11 @@
 
         img{
             width: 100%;
+            z-index: 100;
+        }
+
+        &.height{
+            z-index: 10;
         }
     }
     
@@ -185,9 +190,22 @@
             transform: translateY(-100%);
         }
     }
+    .status-msg{ 
+        position: absolute;
+        width: 100%;
+        height: 100% * 40 / 433;
+        line-height: 1.3;
+        text-align: center;
+        color: #f95f15;
+        top: 100% * 65 / 433;
+        left: 0;
+        font-weight: 700;
+        letter-spacing: 0.3rem;
+    }
     // 活动规则弹窗
     .win_rule{
         top: 55%;
+        overflow: hidden;
         .content{
             position: absolute;
             width: 100% * 283 / 348;
@@ -197,6 +215,8 @@
             overflow-wrap: break-word;
             word-break: break-all;
             word-wrap: break-word;
+            height: 100% * 400 / 505;
+            overflow-x: scroll;
 
             .title{
                 font-weight: 700;
@@ -229,18 +249,10 @@
         }
         .status-in{
             background-image: url(./images/status-in.jpg);
+            width: 100% * 501 / 620;
 
-            .status-in-msg{ 
-                position: absolute;
-                width: 100%;
-                height: 100% * 40 / 433;
-                line-height: 1.3;
-                text-align: center;
-                color: #f95f15;
+            .status-msg{ 
                 top: 100% * 65 / 433;
-                left: 0;
-                font-weight: 700;
-                letter-spacing: 0.3rem;
             }
         }
         .status-out{
@@ -248,23 +260,20 @@
         }
         .status-un{
             background-image: url(./images/status-un.jpg);
+            .status-msg{
+                top: 100% * 15 / 433;
+                width: 120%;
+                left: -9%;
+                letter-spacing: 0;
+            }
         }
         .status-end{
             background-image: url(./images/status-end.jpg);
         }
         .status-error{
             background-image: url(./images/status-error.jpg);
-            .status-error-msg{ 
-                position: absolute;
-                width: 100%;
-                height: 100% * 40 / 433;
-                line-height: 1.3;
-                text-align: center;
-                color: #f95f15;
+            .status-msg{
                 top: 100% * 95 / 433;
-                left: 0;
-                font-weight: 700;
-                letter-spacing: 0.3rem;
             }
         }
         .status-no{
@@ -344,6 +353,9 @@
             overflow-y: auto;
             left: 50%;
             transform: translateX(-50%);
+            .status-msg{
+                top: 100% * 250 / 716;
+            }
 
             .win_owner-item{
                 width: 100%;
